# Gamacs

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.rs
res/: map.txt  test_dialog.txt
src/: Env.cpp  Env.hpp  Player.cpp  Player.hpp  Pnj.cpp  Pnj.hpp  Position.cpp  Position.hpp  RegularAction.cpp  RegularAction.hpp  Sprite.cpp  Sprite.hpp  TxtBubble.cpp  TxtBubble.hpp  Updatable.hpp  include.h  include.hpp  main.cpp  sprite_data.hpp
src/battle/: BattleSquare.cpp  BattleSquare.hpp  LifeBar.cpp  LifeBar.hpp  MainBattle.cpp  MainBattle.hpp  Pown.cpp  Pown.hpp  PownMonster.cpp  PownMonster.hpp  PownMovable.cpp  PownMovable.hpp  PownPlayer.cpp  PownPlayer.hpp
src/battle/powns/: Pown.cpp  Pown.hpp  PownMonster.cpp  PownMonster.hpp  PownMovable.cpp  PownMovable.hpp  PownPlayer.cpp  PownPlayer.hpp
src/entity_settings/: Setting.cpp  Setting.hpp  SettingAttack.cpp  SettingAttack.hpp  SettingFighter.cpp  SettingFighter.hpp
src/game/: GamePosition.cpp  GamePosition.hpp  MainGame.cpp  MainGame.hpp  Map.cpp  Map.hpp  TxtBubble.cpp  TxtBubble.hpp
src/game/game_characters/: GamePlayer.cpp  GamePlayer.hpp  MapEntity.cpp  MapEntity.hpp  Player.cpp  Player.hpp  Pnj.cpp  Pnj.hpp
src/game/game_characters/monsters/: Monster.cpp  Monster.hpp  Orc.cpp  Orc.hpp
src/include/: global_include.hpp  sprite_data.hpp  sprite_paths.hpp
src/interfaces/: Collider.hpp  MovableFighter.cpp  MovableFighter.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  Updatable.hpp
src/main_menu/: MainMenu.cpp  MainMenu.hpp
src/movables/: Collider.hpp  Golem.cpp  Golem.hpp  MapEntity.cpp  MapEntity.hpp  Movable.cpp  Movable.hpp  Player.cpp  Player.hpp  Sprite.cpp  Sprite.hpp  Static.cpp  Static.hpp
src/movables/monsters/: Monster.cpp  Monster.hpp  Orc.cpp
src/renderers/: MainBattle.cpp  MainBattle.hpp  MainGame.cpp  MainGame.hpp  MainMenu.cpp  MainMenu.hpp  Renderer.cpp  Renderer.hpp
src/sprites/: Movable.cpp  Movable.hpp  Sprite.cpp  Sprite.hpp  Static.cpp  Static.hpp
src/view/: Map.cpp  Map.hpp  Sprite.cpp  Sprite.hpp
